# CilogC80

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
asm/: add_test.asm  compile.bat  file1.txt  file2.txt  main.asm  number-output.asm  sub_test.asm
cmake/modules/: FindSDL.cmake
doc/: Doxyfile
domain_model/: domain_model.wsd  modeling_in_color.wsd
resources/: gui_cpu_view.rgl  gui_footbar.rgl  gui_iconset.rgi  gui_memory_view.rgl  gui_menubar.rgl  icons.rgi  iconset.rgi
roms/: test.z80
src/: main.c
src/cpu/: cpu.c  cpu.h  instruction_handler.c  instruction_handler.h  instructions.h  register.c  register.h  zilogZ80.c  zilogZ80.h
src/emulator/: emulator.c  emulator.h  file_grabber.c  file_grabber.h  file_reader.c  file_reader.h  graphics.c  graphics.h  graphics_interface.c  graphics_interface.h  gui_icons.h  iconset.rgi.h
src/emulator/gui/: gui_console.c  gui_console.h  gui_internal_view.c  gui_internal_view.h  gui_menu_bar.c  gui_menu_bar.h
src/emulator/gui_components/: custom_filedialog.h  gui_cpu_view.h  gui_defines.h  gui_emulator_info_view.h  gui_file_dialog.h  gui_footer_bar.h  gui_memory_view.h  gui_menu_bar.h  gui_menubar.h  gui_preferences.h  gui_ram_memory_view.h  gui_rom_memory_view.h  gui_settings.h  gui_toast.h  gui_tooltiptext.h  raygui_filedialog.h
src/graphics_unit/: graphics_unit.c  graphics_unit.h
src/memory/: mem.c  mem.h  ram.c  ram.h  rom.c  rom.h
src/utils/: error_handler.c  error_handler.h  file_loader.c  file_loader.h  utils.h
tests/: test_cpu.c
tests/cpu/: test_add_instructions.c  test_cpu.c  test_ld_instructions.c  test_sub_instructions.c
tests/memory/: test_mem.c
tests/register/: test_register.c
uml/activity_diagram/: activity_diagram.wsd
uml/class/: class_diagram.wsd
uml/interaction diagram/: activity_diagram.wsd
uml/state_diagram/: state_diagram.wsd
uml/use_case_diagram/: uc_diagram.wsd
